--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -59,7 +59,9 @@
             <div class="panel panel-default">
                 <div class="panel-heading"></div>
                 <div class="panel-body">
-                    <p>Please send your name and email to ehgard@uga.edu to get email updates on WatershedUGA.</p>
+                    <p>Please send your name and email to <strong>watershed@uga.edu</strong> to get email updates on Watershed UGA. Please note if you are a
+                        student,
+                        a member of the community, or a faculty member in the email. </p>
                 </div>
             </div>
 
