--- a/src/Sustain/UserBundle/Resources/views/User/show.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/show.html.twig
@@ -3,8 +3,10 @@
 {% block body -%}
 
     <div class="well col-sm-12">
-        {% if is_granted('ROLE_ADMIN') %}
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+        {% if is_granted('ROLE_ADMIN') or app.user.username==entity.username %}
             <a class="btn btn-default pull-right" href="{{ path('user_edit', { 'id': entity.id }) }}">Edit</a>
+        {% endif %}
         {% endif %}
 
         <h1>{{ entity.firstname }} {{ entity.lastname }}</h1>
