opportunity by type

--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -14,7 +14,8 @@
     ('_route')%}
         <ul class=" nav nav-sidebar list-unstyled" style="margin-top: 20px;">
             <li><a href="{{ path('event') }}">Events</a></li>
-            <li><a href="{{ path('opportunity') }}">Internships</a></li>
+            <li><a href="{{ path('opportunity', {'type': 'service'}) }}">Service Opportunities</a></li>
+            <li><a href="{{ path('opportunity', {'type': 'intern'} ) }}">Internships</a></li>
             <li><a href="{{ path('page_show', { 'id': 10 }) }}">Service Learning</a></li>
         </ul>
     {% endif %}
