--- a/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Service Opportunities</h1>
+    <h1>Service Opportunities/Internships</h1>
 
     {% for entity in entities %}
         <div class="col-sm-12 well">
