--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -11,9 +11,12 @@
 
 {% block sidebar %}
     {% if 'event' in app.request.attributes.get('_route') or 'opportunity' in app.request.attributes.get('_route') or 'page' in app.request.attributes.get
-    ('_route')%}
+    ('_route') %}
         <ul class=" nav nav-sidebar list-unstyled" style="margin-top: 20px;">
-            <li><a href="{{ path('event') }}">Events</a></li>
+            <li>Events</li>
+            <li><a href="{{ path('event') }}">List</a></li>
+            <li><a href="{{ path('event_month') }}">Month</a></li>
+            <li>Service</li>
             <li><a href="{{ path('opportunity', {'type': 'service'}) }}">Service Opportunities</a></li>
             <li><a href="{{ path('opportunity', {'type': 'intern'} ) }}">Internships</a></li>
             <li><a href="{{ path('page_show', { 'id': 10 }) }}">Service Learning</a></li>
