--- a/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
@@ -11,7 +11,11 @@
 
 {% block body -%}
 
-    <h1>Events</h1>
+    <h1 style="display: inline-block;">Events</h1>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a class="btn btn-primary pull-right" href="{{ path('event_new') }}">New Event</a>
+    {% endif %}
+
     {# Calendar #}
         {% for entity in entities %}
             <div class="col-sm-12 well">
@@ -30,11 +34,4 @@
                 {% endif %}
             </div>
         {% endfor %}
-
-        {% if is_granted('ROLE_ADMIN') %}
-        <a class="btn btn-default" href="{{ path('event_new') }}">
-            Create a new event
-        </a>
-        {% endif %}
-
 {% endblock %}
