--- a/src/Sustain/AppBundle/Resources/views/Activity/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Activity/index.html.twig
@@ -3,7 +3,10 @@
 {% block title %}Activities{% endblock %}
 
 {% block body %}
-    <h1>Activities</h1>
+    <h1 style="display: inline-block;">Activities</h1>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a class="btn btn-primary pull-right" href="{{ path('activity_new') }}">New Activity</a>
+    {% endif %}
 
     <div class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
