--- a/src/Sustain/AppBundle/Resources/views/File/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/index.html.twig
@@ -3,7 +3,17 @@
 {% block title %}Resources{% endblock %}
 
 {% block body %}
-    <h1>Resources</h1>
+
+    <h1 style="display: inline-block;">Resources</h1>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a class="btn btn-primary pull-right" id='file_new_upload' title='Upload Resource' href="{{ path('file_new') }}"><i class="glyphicon
+        glyphicon-upload"></i> Upload
+            Resource</a>
+        <a class="btn btn-primary pull-right" id='file_new_upload' title='Upload Resource' href="{{ path('file_new', {'type': 'link'}) }}"><i
+                    class="glyphicon glyphicon-link"></i>
+            Link to
+            Resource</a>
+    {% endif %}
 
     <div class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
