--- a/src/Sustain/AppBundle/Resources/views/Objective/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Objective/index.html.twig
@@ -3,8 +3,10 @@
 {% block title %}Objectives{% endblock %}
 
 {% block body -%}
-
-    <h1>Learning Objectives</h1>
+    <h1 style="display: inline-block;">Learning Objectives</h1>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a class="btn btn-primary pull-right" href="{{ path('objective_new') }}">New Objective</a>
+    {% endif %}
 
     <div class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
