--- a/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
@@ -46,14 +46,17 @@
             {% for file in entity.files %}
                 <tr class="file">
                     <td>
-                        <span class="label label-info" data-toggle="tooltip" title="This an {{ file.ext }} file ">{{ file.ext }}</span>
-                        <a class="" href="{{ path('file_get', { 'id': file.id}) }}" title="View {{ file.name }}">
-                            {{ file.name }}
-                        </a>
-                        <a class="pull-right" href="{{ path('file_edit', { 'id': file.id}) }}" title="Edit {{ file.name }}">
-                            Settings
-                        </a>
-                        {{ file.description|raw }}
+                        {% if file.url is null %}
+                            <span class="label label-info" data-toggle="tooltip" title="This an {{ file.ext }} file ">{{ file.ext }}</span>
+                            <a class="" href="{{ path('file_get', { 'id': file.id}) }}" title="View {{ file.name }}">
+                                {{ file.name }}
+                            </a>
+                        {% else %}
+                            <span class="label label-info" data-toggle="tooltip" title="This an link to a resource">Link</span>
+                            <a class="" href="{{ file.url }}" title="Go to  {{ file.name }}" target="_blank">
+                                {{ file.name }}
+                            </a>
+                        {% endif %}
                     </td>
                     <td class="labels hidden-xs">
                         {% for tag in file.tags %}
