--- a/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
@@ -12,6 +12,7 @@
 {% block body -%}
 
     <h1 style="display: inline-block;">Events</h1>
+    <a class="btn btn-default btn-small pull-right" style="margin-top: 20px;" href="{{ path('event_month') }}">Events Month</a>
     {% if is_granted('ROLE_ADMIN') %}
         <a class="btn btn-primary pull-right" href="{{ path('event_new') }}">New Event</a>
     {% endif %}
