--- a/src/Sustain/AppBundle/Resources/views/Event/month.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/month.html.twig
@@ -48,14 +48,16 @@
 
 
 {% block body -%}
-
     <h1 style="display: inline-block;">Events</h1>
+    <a class="btn btn-default btn-small pull-right" style="margin-top: 20px;" href="{{ path('event') }}">Events List</a>
+
     {% if is_granted('ROLE_ADMIN') %}
         <a class="btn btn-primary pull-right" href="{{ path('event_new') }}">New Event</a>
     {% endif %}
 
     {# Calendar #}
     <div class="col-sm-12 well">
+
 
         <div id='calendar'></div>
 
