--- a/src/Sustain/AppBundle/Resources/views/File/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/index.html.twig
@@ -15,10 +15,14 @@
             Resource</a>
     {% endif %}
 
+
+
     <div class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         Resources consist of module activities, website resources, maps, background readings, and others. Click on the title to download.
     </div>
+
+    <span class="sr-only">Search for resources.</span><gcse:search></gcse:search>
 
     <table id="file_list" class="col-sm-12 table">
         <thead>
