--- a/src/Sustain/AppBundle/Resources/views/File/new.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/new.html.twig
@@ -21,17 +21,8 @@
 {% endblock %}
 
 {% block body -%}
-    <div class="col-sm-8">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <button id="close_form" type="button" class="close">&times;</button>
-                <h2 class="panel-title small">Upload</h2>
-            </div>
-            <div class="panel-body">
-                {{ form(form) }}
-            </div>
-        </div>
-    </div>
+    <h1>Upload/Link</h1>
 
 
+    {{ form(form) }}
 {% endblock %}
