--- a/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
@@ -34,8 +34,10 @@
         <p class="">{{ entity.description|raw }}</p>
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
-                <a class="btn btn-default pull-right" href="{{ path('mapset_edit', { 'id':
-                    entity.id }) }}">Edit</a>
+                <a class="btn btn-primary pull-right" href="{{ path('mapset_edit', { 'id':
+                    entity.id }) }}">Edit Map Settings</a>
+                <a class="btn btn-primary pull-right" href="{{ path('map', { 'id':
+                    entity.id }) }}">List Pins</a>
             {% endif %}
         {% endif %}
     </div>
