--- a/src/Sustain/AppBundle/Resources/views/Objective/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Objective/edit.html.twig
@@ -5,12 +5,6 @@
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('objective') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    {{ form(delete_form) }}
+
 {% endblock %}
