--- a/src/Sustain/AppBundle/Resources/views/Tag/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Tag/edit.html.twig
@@ -5,7 +5,5 @@
 
     {{ form(edit_form) }}
 
-    <ul class="record_actions">
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    {{ form(delete_form) }}
 {% endblock %}
