--- a/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
@@ -38,6 +38,7 @@
                     entity.id }) }}">Edit Map Settings</a>
                 <a class="btn btn-primary pull-right" href="{{ path('map', { 'id':
                     entity.id }) }}">List Pins</a>
+                <a href="{{ path('map_new') }}" class="btn btn-primary pull-right">Add Pin</a>
             {% endif %}
         {% endif %}
     </div>
