map display tweak

--- a/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
@@ -28,7 +28,7 @@
 {% block title %}Maps{% endblock %}
 
 {% block body -%}
-    <div class="col-sm-offset-1  col-sm-10">
+    <div class="col-sm-offset-1  col-sm-10 well">
         <h2>{{ entity.name }}</h2>
 
         <p class="">{{ entity.description|raw }}</p>
@@ -43,7 +43,7 @@
         {% endif %}
     </div>
 
-    <div id="map_canvas" class="col-sm-offset-1 col-sm-10" style="height:85vh;">
+    <div id="map_canvas" class="col-sm-offset-1 col-sm-10 well" style="height:85vh; margin-top:-20px;">
 
     </div>
 
