dup events and join event and opportunity

--- a/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body -%}
 
-    <h1 style="display: inline-block;">Service Opportunities/Internships</h1>
+    <h1 style="display: inline-block;">Partners/Internships</h1>
     {% if is_granted('ROLE_ADMIN') %}
         <a class="btn btn-primary pull-right" href="{{ path('opportunity_new') }}">New Opportunity</a>
     {% endif %}
